--- a/style.css
+++ b/style.css
@@ -1,4 +1,197 @@
-* {
-    margin: 0;
-    padding: 0;
+/* Fonts */
+
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Montserrat";
+  font-display: swap;
+  src:
+    url("../assets/fonts/Montserrat-Regular.woff2") format("woff2"),
+    url("../assets/fonts/Montserrat-Regular..woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 500;
+  font-family: "Montserrat";
+  font-display: swap;
+  src:
+    url("../assets/fonts/Montserrat-Medium.woff2") format("woff2"),
+    url("../assets/fonts/Montserrat-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 700;
+  font-family: "Montserrat";
+  font-display: swap;
+  src:
+    url("../assets/fonts/Montserrat-Bold.woff2") format("woff2"),
+    url("../assets/fonts/Montserrat-Bold.woff") format("woff");
+}
+
+/* Utils */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  font-family: "Montserrat", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 1.3;
+  color: #333333;
+}
+
+.wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0 auto;
+}
+
+.wrapper .header,
+.wrapper .footer {
+  flex-shrink: 0;
+}
+
+.wrapper .main {
+  flex-grow: 1;
+}
+
+.container {
+  width: 100%;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  white-space: nowrap;
+  border: 0;
+  clip: rect(0 0 0 0);
+  clip-path: inset(100%);
+}
+
+/* Styles */
+
+/* header */
+
+.header {
+  min-height: 100px;
+  background-color: #555583;
+}
+
+.header .container {
+  min-height: 100%;
+}
+
+.nav__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav__item {
+  padding-top: 20px;
+}
+
+.nav__item:not(:last-child) {
+  margin-right: 30px;
+  padding-top: 20px;
+}
+
+.nav__link {
+  text-decoration: none;
+  color: #ffffff;
+  padding: 0 20px;
+  font-size: 16px;
+  line-height: 50px;
+  transition: 0.3s;
+}
+
+.nav__link:hover {
+  opacity: 0.5;
+}
+
+/* main */
+
+.personal .container {
+  padding-top: 50px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.personal__image,
+.personal__content {
+  max-width: 50%;
+}
+
+/* footer */
+
+.footer {
+  min-height: 100px;
+  background-color: #555583;
+  display: flex;
+  align-items: center;
+}
+
+.footer__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+
+.footer__link {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  margin-right: 200px;
+  text-decoration: none;
+  color: #ffffff;
+  font-size: 16px;
+  transition: 0.3s;
+}
+
+.footer__link:hover {
+  opacity: 0.5;
+}
+
+.footer__img {
+  margin-right: 25px;
+}
+
+.footer__date {
+  margin: 0;
+  padding-left: 200px;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 50px;
 }
