--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
     url("../assets/fonts/Montserrat-Bold.woff") format("woff");
 }
 
-/* Utils */
+/* Utils and normalize */
 
 *,
 *::before,
@@ -58,6 +58,14 @@ body {
   color: #333333;
 }
 
+a {
+  background-color: transparent;
+}
+
+img {
+  border-style: none;
+}
+
 .wrapper {
   position: relative;
   display: flex;
@@ -73,13 +81,28 @@ body {
 
 .wrapper .main {
   flex-grow: 1;
+  display: block;
+}
+
+.main__up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #a7a7a7 url("./assets/img/arrow.svg") center no-repeat;
+  transition: 0.3s;
+}
+
+.main__up:hover {
+  opacity: 0.6;
 }
 
 .container {
   width: 100%;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 0 50px;
 }
 
 .visually-hidden {
@@ -101,11 +124,12 @@ body {
 
 .header {
   min-height: 100px;
-  background-color: #555583;
+  background-color: #0675ab;
 }
 
 .header .container {
   min-height: 100%;
+  padding: 0 50px;
 }
 
 .nav__list {
@@ -123,14 +147,13 @@ body {
 
 .nav__item:not(:last-child) {
   margin-right: 30px;
-  padding-top: 20px;
 }
 
 .nav__link {
   text-decoration: none;
-  color: #ffffff;
+  color: #f1f1f1;
   padding: 0 20px;
-  font-size: 16px;
+  font-size: 1.25rem;
   line-height: 50px;
   transition: 0.3s;
 }
@@ -141,24 +164,401 @@ body {
 
 /* main */
 
-.personal .container {
-  padding-top: 50px;
+.main .container {
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  grid-template-rows: repeat(5, auto);
+}
+
+.personal {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  padding: 50px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+.personal__image {
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  margin: 0 auto;
+  margin-bottom: 35px;
+  overflow: hidden;
+}
+
+.personal__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.personal__content h1 {
+  margin: 0;
+  margin-bottom: 35px;
+  font-size: 3rem;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.personal__content p {
+  margin: 0 auto;
+  padding: 10px;
+  max-width: 70%;
+  border: 1px solid #333333;
+  background-color: #e0dbe0;
+  font-size: 1.6rem;
+  margin-bottom: 35px;
+}
+
+.contacts {
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  background-color: #064873;
+  padding: 50px;
+  color: #f1f1f1;
+}
+
+.contacts h2 {
+  width: 300px;
+  margin: 0 auto;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: #064873;
+  border-radius: 30px;
+  margin-top: -75px;
+}
+
+.contacts__list {
+  margin: 0;
+  padding: 70px 50px 0 50px;
+  list-style: none;
+}
+
+.contacts__item {
+  margin-bottom: 30px;
+}
+
+.contacts__link,
+.contacts__item p {
+  position: relative;
+  padding-left: 40px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  text-decoration: none;
+  color: #f1f1f1;
+  transition: 0.3s;
+}
+
+.contacts__link:hover {
+  opacity: 0.6;
+}
+
+.contacts__link::before,
+.contacts__item p::before {
+  position: absolute;
+  content: "";
+  width: 30px;
+  height: 30px;
+  top: 0;
+  left: 0;
+  background-size: cover;
+}
+
+.contacts__link--gh::before {
+  background-image: url("./assets/img/github-white.svg");
+  background-size: cover;
+}
+
+.contacts__link--cp::before {
+  background-image: url("./assets/img/codepen.svg");
+}
+
+.contacts__link--gm::before {
+  background-image: url("./assets/img/email.svg");
+}
+
+.contacts__link--tg::before {
+  background-image: url("./assets/img/telegram.svg");
+}
+
+.contacts__item p::before {
+  background-image: url("./assets/img/map-pin.svg");
+}
+
+.summary {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  background-color: #e0dbe0;
+  padding: 50px;
+}
+
+.summary h2 {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: start;
+  color: #f1f1f1;
+  width: 90%;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  background-color: #064873;
+  border-radius: 0 75% 5px 0;
+  box-shadow: 90px 0 0 0 #0675ab;
+}
+
+.summary p {
+  font-size: 1.6rem;
+  line-height: 1.3;
+  font-weight: 400;
+}
+
+.skills {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+  background-color: #0675ab;
+  padding: 50px 50px 0 50px;
+  color: #f1f1f1;
+}
+
+.skills h2 {
+  width: 300px;
+  margin: 0 auto;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: #0675ab;
+  border-radius: 30px;
+  margin-top: -75px;
+}
+
+.skills__list {
+  margin: 0;
+  padding: 70px 50px 0 50px;
+  max-height: 400px;
+  list-style: none;
   display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.skills__item {
+  margin-bottom: 20px;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: #f1f1f1;
+}
+
+.code {
+  grid-column: 2 / 3;
+  grid-row: 2 / 4;
+  background-color: #e0dbe0;
+  padding: 50px 50px 0 50px;
+}
+
+.code h2 {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: start;
+  color: #f1f1f1;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  background-color: #064873;
+  border-radius: 0 75% 5px 0;
+  box-shadow: 90px 0 0 0 #0675ab;
+}
+
+.projects {
+  grid-column: 1 / 3;
+  grid-row: 4 / 5;
+  background-color: #f1f1f1;
+  padding: 50px;
+}
+
+.projects h2 {
+  margin: 0 0 35px 0;
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-align: center;
+  color: #333333;
+  text-transform: uppercase;
+}
+
+.projects__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.personal__image,
-.personal__content {
-  max-width: 50%;
+.projects__item {
+  position: relative;
+  margin-bottom: 50px;
+  transition: 0.3s;
+}
+
+.projects__link {
+  text-decoration: none;
+  color: #333333;
+}
+
+.projects__link h3 {
+  margin: 0;
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.projects__link-source {
+  font-size: 1rem;
+  font-weight: 400;
+  transition: 0.3s;
+}
+
+.projects__link-source:hover {
+  opacity: 0.6;
+}
+
+.projects__image {
+  width: 280px;
+  height: 250px;
+  margin-bottom: 20px;
+  background-color: #555583;
+  transition: 0.3s;
+}
+
+.projects__item:hover .projects__image {
+  transform: scale(1.03);
+}
+
+.projects__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.3s;
+}
+
+.projects__item:hover .projects__img {
+  opacity: 0.6;
+}
+
+.projects__tooltip {
+  display: none;
+}
+
+.projects__item:hover .projects__tooltip {
+  display: block;
+  position: absolute;
+  top: -50px;
+  left: 0;
+  z-index: 1;
+  padding: 10px;
+  font-size: 0.8rem;
+  line-height: 20px;
+  font-weight: 400;
+  color: #ffffff;
+  background-color: #229abf;
+  border: none;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+
+.projects__item:hover .projects__tooltip::before {
+  position: absolute;
+  content: "";
+  top: 33px;
+  left: 34px;
+  width: 13px;
+  height: 13px;
+  background-color: #229abf;
+  border: none;
+  transform: rotate(45deg);
+}
+
+.education {
+  grid-column: 2 / 3;
+  grid-row: 5 / 6;
+  background-color: #e0dbe0;
+  padding: 50px;
+}
+
+.education h2 {
+  margin: 0;
+  font-size: 2rem;
+  font-weight: 500;
+  text-align: start;
+  color: #f1f1f1;
+  width: 90%;
+  padding: 10px 20px;
+  text-transform: uppercase;
+  background-color: #064873;
+  border-radius: 0 75% 5px 0;
+  box-shadow: 90px 0 0 0 #0675ab;
+}
+
+.languages {
+  grid-column: 1 / 2;
+  grid-row: 5 / 6;
+  padding: 50px;
+  background-color: #229abf;
+  color: #f1f1f1;
+}
+
+.languages h2 {
+  width: 300px;
+  margin: 0 auto;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  background-color: #229abf;
+  border-radius: 30px;
+  margin-top: -75px;
+}
+
+.languages p {
+  font-style: italic;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-bottom: 45px;
+}
+
+.languages table,
+.languages th,
+.languages td {
+  width: 100%;
+  border: 1px solid #f1f1f1;
+  padding: 10px 20px;
+  border-collapse: collapse;
+  text-align: start;
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+.languages th {
+  font-weight: 700;
 }
 
 /* footer */
 
 .footer {
   min-height: 100px;
-  background-color: #555583;
+  background-color: #0675ab;
   display: flex;
   align-items: center;
+}
+
+.footer .container {
+  padding: 0 50px;
 }
 
 .footer__list {
@@ -167,6 +567,7 @@ body {
   list-style: none;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .footer__link {
@@ -175,8 +576,9 @@ body {
   padding: 10px;
   margin-right: 200px;
   text-decoration: none;
-  color: #ffffff;
-  font-size: 16px;
+  color: #f1f1f1;
+  font-size: 1.6rem;
+  font-weight: 400;
   transition: 0.3s;
 }
 
@@ -190,8 +592,9 @@ body {
 
 .footer__date {
   margin: 0;
-  padding-left: 200px;
-  color: #ffffff;
-  font-size: 16px;
+  padding-left: 400px;
+  color: #f1f1f1;
+  font-size: 1.6rem;
+  font-weight: 400;
   line-height: 50px;
 }
