--- a/style.css
+++ b/style.css
@@ -368,6 +368,7 @@ img {
   font-weight: 500;
   text-align: start;
   color: #f1f1f1;
+  width: 90%;
   padding: 10px 20px;
   text-transform: uppercase;
   background-color: #064873;
